Fix the issue of auth expired Truncate long comment to save space

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
   box-shadow: 0 1px 2px rgba(0,0,0,.23);
   -webkit-transform: rotate(7deg);
 }
+.list-card.is-stickered 
+.list-card-details {
+  margin-top: 0px !important;
+}
 .highlight{
   background: #ffff88;
   border-radius: 3px;
@@ -20,6 +24,8 @@
 .latest-comment{
   background-color: #E2E4E6 !important;
   padding: 5px;
+  margin: 5px 5px 0px 5px !important;
+  width: 96%;
 }
 .hidden{
   display: none !important;
